@@ -1,4 +1,6 @@
 package pack.login;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.web.bind.annotation.*;
@@ -6,13 +8,17 @@ import org.springframework.web.client.RestTemplate;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import pack.dto.UserDto;
 import pack.entity.User;
 import pack.repository.UsersRepository;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.http.HttpRequest;
+import java.net.http.HttpClient;
+import java.net.http.HttpResponse;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 import java.util.Optional;
 
@@ -23,56 +29,52 @@ public class KakaoController {
     @Value("${kakao.api-url.user-info}")
     private String kakaoUserInfoUrl;
 
-    private final UsersRepository usersRepository;
-
-    public KakaoController(UsersRepository usersRepository) {
-        this.usersRepository = usersRepository;
-    }
+    @Autowired
+    private UsersRepository urps;
 
     @PostMapping
     public ResponseEntity<User> handleKakaoLogin(@RequestBody Map<String, String> payload) {
         String accessToken = payload.get("accessToken");
-        
+       
         try {
-            URL url = new URL(kakaoUserInfoUrl);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
-            conn.setRequestProperty("Authorization", "Bearer " + accessToken);
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(kakaoUserInfoUrl))
+                .header("Authorization", "Bearer " + accessToken)
+                .GET()
+                .build();
 
-            if (conn.getResponseCode() == HttpURLConnection.HTTP_OK) {
-                BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-                String inputLine;
-                StringBuilder content = new StringBuilder();
-                
-                while ((inputLine = in.readLine()) != null) {
-                    content.append(inputLine);
-                }
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-                in.close();
-                conn.disconnect();
+            if (response.statusCode() == HttpURLConnection.HTTP_OK) {
+                String content = response.body();
 
-                // JSON 파싱 (예: Jackson ObjectMapper를 사용하여 파싱)
                 ObjectMapper mapper = new ObjectMapper();
-                Map<String, Object> userInfo = mapper.readValue(content.toString(), Map.class);
+                Map<String, Object> userInfo = mapper.readValue(content, Map.class);
 
-                // 이후 기존 코드대로 처리
                 String kakaoId = String.valueOf(userInfo.get("id"));
-                Map<String, Object> kakaoAccount = (Map<String, Object>) userInfo.get("kakao_account");
-//                String email = (String) kakaoAccount.get("email");
-//                Map<String, Object> profile = (Map<String, Object>) kakaoAccount.get("profile");
-//                String nickname = (String) profile.get("nickname");
 
+                Map<String, Object> kakaoAccount = (Map<String, Object>) userInfo.get("kakao_account");
+                String email = (String) kakaoAccount.get("email");
+
+                Map<String, Object> profile = (Map<String, Object>) kakaoAccount.get("profile");
+
+                String nickname = profile != null ? (String) profile.get("nickname") : null;
+                String profilePic = profile != null ? (String) profile.get("thumbnail_image_url") : null;
+
+                
+                System.out.println("\n\n\n" + kakaoId +  " " + email + " " + nickname + " " + profilePic + "\n\n\n");
+                
                 // 사용자 정보 저장 또는 업데이트
-                Optional<User> userOptional = usersRepository.findById(kakaoId);
-                User user;
+                Optional<User> userOptional = urps.findById(kakaoId); 
+               
+                User user = null;
+                
                 if (userOptional.isPresent()) {
-                    user = userOptional.get();
+                	
                 } else {
-                    user = new User();
-                    user.setId(kakaoId);
-//                    user.setEmail(email);
-//                    user.setNickname(nickname);
-                    usersRepository.save(user);
+                	user = User.builder().id(kakaoId).email(email).nickname(nickname).pic(profilePic).subpath("kakao").build();
+                    urps.save(user);
                 }
 
                 return ResponseEntity.ok(user);
